<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="139dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            tools:ignore="VectorDrawableCompat" />

        <com.example.dapparels.Utilities.DATextViewBold
            android:id="@+id/DATextViewBold"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.example.dapparels.Utilities.DAEditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_email_id"
                android:padding="@dimen/et_padding"
                android:textSize="@dimen/et_textSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp">

            <com.example.dapparels.Utilities.DAEditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/et_hint_password"
                android:inputType="textPassword"
                android:padding="@dimen/et_padding"
                android:textSize="@dimen/et_textSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.dapparels.Utilities.DATextViewRegular
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="15dp"
            android:gravity="right"
            android:text="@string/lbl_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            android:layout_marginRight="15dp" />

        <com.example.dapparels.Utilities.DAButton
            android:id="@+id/main_login_button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_login"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_textSize" />


        <com.example.dapparels.Utilities.DATextViewRegular
            android:id="@+id/DATextViewRegular3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account" />

        <com.example.dapparels.Utilities.DATextViewBold
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/register" />


    </LinearLayout>

</ScrollView>
