<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.UserProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <com.example.dapparels.Utilities.DATextViewBold
                android:id="@+id/completeProfileTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/title_complete_Profile"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/userPhoto"
                android:layout_width="@dimen/profile_user_image_size"
                android:layout_height="@dimen/profile_user_image_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/profile_user_image_margin_top"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/image_placeholder"
                tools:srcCompat="@drawable/image_placeholder" />

            <com.example.dapparels.Utilities.DAEditText
                android:id="@+id/completeProfile_FirstName_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/hint_first_name"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <com.example.dapparels.Utilities.DAEditText
                android:id="@+id/completeProfile_LastName_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/hint_last_name"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <com.example.dapparels.Utilities.DAEditText
                android:id="@+id/completeProfile_EmailID_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/et_hint_email_id"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <com.example.dapparels.Utilities.DAEditText
                android:id="@+id/completeProfile_MobileNumber_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/et_hint_mobile_number"
                android:inputType="phone"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                >

                <com.example.dapparels.Utilities.DARadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/profile_radio_button_height"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:shadowRadius="5"
                    android:text="@string/lbl_male"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textStyle="bold" />

                <com.example.dapparels.Utilities.DARadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/profile_radio_button_height"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/lbl_female"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textStyle="bold" />

            </RadioGroup>

            <com.example.dapparels.Utilities.DAButton
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/lbl_save"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_textSize" />


        </LinearLayout>

</ScrollView>